añadimos todos los html a index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home | curso practico de javaScript</title>
 </head>
 <body>
+    <header>
+        <h1>
+            talleres del curso de javaScript
+        </h1>
+    </header>
+
+    <section>
+        <nav>
+            <ol>
+                <li>
+                    <a href="./figuras.html">Taller #1</a>
+                </li>
+                <li>
+                    <a href="./descuentos.html">Taller #2</a>
+                </li>
+                <li>
+                    <a href="./promedio.html">Taller #3A</a>
+                </li>
+                <li>
+                    <a href="./mediana.html">Taller #3B</a>
+                </li>
+                <li>
+                    <a href="./moda.html">Taller #3C</a>
+                </li>
+                <li>
+                    <a href="./salarios.html">Taller #4</a>
+                </li>
+            </ol>
+        </nav>
+    </section>
     
 </body>
 </html>
